Fix size and spacing on selectize inputs
Make the selectize more appropriately sized and spaced compared to the other inputs.

--- a/MillimanAccessPortal/MillimanAccessPortal/wwwroot/css/map_modules/_selectize_overrides.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/wwwroot/css/map_modules/_selectize_overrides.scss
@@ -1,12 +1,10 @@
 div.selectize-input {
     color: $charcoal;
-    min-height: 40px;
     border-radius: .25em;
     border: solid 1px transparent;
     transition: border 0.2s;
-    padding: .25em .5em;
+    padding: .5em !important;
     font-size: 1rem;
-    margin: 0 .25em .5em;
     box-shadow: none;
     -webkit-box-shadow: none;
 
@@ -36,5 +34,9 @@ div.selectize-input {
                 display: none;
             }
         }
+    }
+
+    div.item {
+        margin: 0 .25em !important;
     }
 }
